--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <option value="medium" selected>Medium</option>
             <option value="hard">Hard</option>
         </select>
+         <button id="fullscreenButton">⛶</button>
         <div class="score">
             <span id="playerScore">Player: 0</span> | <span id="aiScore">AI: 0</span>
         </div>
