Update HTML, CSS, and JS for pong game enhancements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="welcomeScreen" class="welcome-screen">
-        <h2>Welcome to Pong!</h2>
+        <h2>Welcome to Pong-Game!</h2>
         <input type="text" id="playerNameInput" placeholder="Enter your name (optional)" maxlength="15">
         <button id="startGameButton">Play Game</button>
     </div>
