restart button added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h1>Pong Game</h1>
     <div class="game-controls">
         <button id="pauseButton">Pause</button>
+        <button id="restartButton">Restart</button>
         <label for="difficulty">Difficulty:</label>
         <select id="difficulty">
             <option value="easy">Easy</option>
@@ -43,6 +44,7 @@
                 <li>First to score 3 points and lead by 2 wins the game.</li>
                 <li>Select difficulty: Easy, Medium, or Hard.</li>
                 <li>Use Pause/Resume to control the game state.</li>
+                <li>Use Restart to reset the current game and start over.</li>
             </ul>
             <button id="closeHowToPlay">Close</button>
         </div>
