fix the how to play button and play button and enhance the ui

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Pong Game</title>
-    <link rel="icon" href="pong.jpeg" type="image/jpeg">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎮</text></svg>" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="themes.css">
 </head>
 <body>
+    <!-- Pong theme background elements -->
+    <div class="pong-elements">
+        <div class="pong-ball" style="top: 20%; left: 10%; animation-delay: 0s;"></div>
+        <div class="pong-ball" style="top: 60%; left: 80%; animation-delay: 2s; animation-duration: 18s;"></div>
+        <div class="pong-ball" style="top: 80%; left: 40%; animation-delay: 5s; animation-duration: 12s;"></div>
+        <div class="pong-paddle" style="top: 30%; left: 5%; animation-delay: 1s;"></div>
+        <div class="pong-paddle" style="top: 50%; right: 5%; animation-delay: 3s;"></div>
+    </div>
+
     <div id="welcomeScreen" class="welcome-screen">
         <h2>Welcome to Pong-Game!</h2>
         <input type="text" id="playerNameInput" placeholder="Enter your name (optional)" maxlength="15">
@@ -31,15 +39,15 @@
             <option value="medium" selected>Medium</option>
             <option value="hard">Hard</option>
         </select>
-<button id="fullscreenButton">⛶</button>
+        <button id="fullscreenButton">⛶</button>
 
-<label for="themeSelector">Theme:</label>
-<select id="themeSelector">
-    <option value="default">Default</option>
-    <option value="neon-retro">Neon Retro</option>
-    <option value="dark-mode">Dark Mode</option>
-    <option value="ocean-blue">Ocean Blue</option>
-</select>
+        <label for="themeSelector">Theme:</label>
+        <select id="themeSelector">
+            <option value="default">Default</option>
+            <option value="neon-retro">Neon Retro</option>
+            <option value="dark-mode">Dark Mode</option>
+            <option value="ocean-blue">Ocean Blue</option>
+        </select>
         <div class="score">
             <span id="playerScore">Player: 0</span> | <span id="aiScore">AI: 0</span>
         </div>
@@ -49,19 +57,19 @@
     <!-- How to Play Modal -->
     <div id="howToPlayModal" class="modal hidden">
         <div class="modal-content">
+            <span class="close" id="closeHowToPlay">&times;</span>
             <h3>🎮 How to Play</h3>
-            <ul style="text-align: left;">
+            <ul>
                 <li>Use <strong>↑</strong> and <strong>↓</strong> keys or <strong>touch</strong> to move your paddle.</li>
                 <li>First to score 3 points and lead by 2 wins the game.</li>
                 <li>Select difficulty: Easy, Medium, or Hard.</li>
                 <li>Use Pause/Resume to control the game state.</li>
                 <li>Use Restart to reset the current game and start over.</li>
             </ul>
-            <button id="closeHowToPlay">Close</button>
+            <button id="closeHowToPlayBtn">Close</button>
         </div>
     </div>
 
-    <script type="module" src="script.js"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
